# pslbc-lab-2017

./: CMakeLists.txt  LICENSE  README.md
01-09-2k17/: 16115036_clab_1.c
03-08-2k17/: 16115036_clab_3.c
04-08-2k17/: 16115036_clab_1.c  16115036_clab_2.c  16115036_clab_4.c  16115036_clab_5.c
04-10-2k17/: 16115036_clab_1.c  16115036_clab_2.c  16115036_clab_3.c  16115036_clab_5.c  first  five  second  third
06-10-2k17/: 16115036_clab_1.c  16115036_clab_2.c  16115036_clab_3.c  clab_4.c  clab_5.c  four  one  three
1st_assignment/: 16115036_clab_10.c  16115036_clab_11.c  16115036_clab_12.c  16115036_clab_13.c  16115036_clab_14.c  16115036_clab_4.c  16115036_clab_5.c  16115036_clab_6.c  16115036_clab_7.c  16115036_clab_8.c  16115036_clab_9.c  eight  eleven  first  five  fourteen  nine  second  seven  six  ten  thirteen  twelve
sets_library/: 4_pattern  4_pattern.c  5_pattern  5_pattern.c  6_pattern  6_pattern.c  main  main.c  palindrome  palindrome.c  print_palindrome  print_palindrome.c
